--- a/public/500.html
+++ b/public/500.html
@@ -2,14 +2,19 @@
 <html>
 <head>
     <title>We're sorry, but something went wrong (500)</title>
-    <link href="/assets/application-3e1e2aa49ef10867f272c60a8b892edd.css" media="all" rel="stylesheet" />
-    <script src="/assets/application-e64f2cff3c3375809295bc01b72c41f4.js"></script>
+    <link href="/assets/application-48aec2cf85303581d5c5df0c78697a1c.css" media="all" rel="stylesheet" />
+    <script src="/assets/application-ae3c71b5eff2fde9e9484e1bf0613f84.js"></script>
     <link href="/assets/favicon-232e1f7dd833abfcd4e08ef3b9189851.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
     <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <img class="img-responsive img-thumbnail img-hover" src="/images/oldcomputers.jpg" %>
+            </div>
+        </div>
         <div class="row">
             <div class="col-md-3">
             </div>
